# src/app/api/api/api.ts
@@ -1,4 +1,7 @@
 export * from './adherent-controller.service';
 import { AdherentControllerApi } from './adherent-controller.service';
 export * from './adherent-controller.serviceInterface';
-export const APIS = [AdherentControllerApi];
+export * from './auth-controller.service';
+import { AuthControllerApi } from './auth-controller.service';
+export * from './auth-controller.serviceInterface';
+export const APIS = [AdherentControllerApi, AuthControllerApi];
