# src/app/api/api/auth-controller.serviceInterface.ts
@@ -1,0 +1,37 @@
+/**
+ * API Adhésion
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { LoginRequestDto } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+export interface AuthenticateUserRequestParams {
+    loginRequestDto: LoginRequestDto;
+}
+
+
+export interface AuthControllerApiInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * 
+     * 
+     * @endpoint post /auth/signin
+* @param requestParameters
+     */
+    authenticateUser(requestParameters: AuthenticateUserRequestParams, extraHttpRequestParams?: any): Observable<object>;
+
+}
