# src/app/api/model/login-request.ts
@@ -1,0 +1,16 @@
+/**
+ * API Adhésion
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface LoginRequestDto { 
+    username: string;
+    password: string;
+}
+
